tests/sema/veo/96_error_return_outside_func.veo
let global_v = 10;
// expected-error@+1: statement not allowed in this scope
return;
